# application-portal

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yml  fly.api.toml  fly.mjml.toml  fly.tasks.toml  manage.py  pyproject.toml  renovate.json  requirements.txt  testing.py
.github/workflows/: component.yml  containers.yml  deploy.yml  lint.yml
api/: __init__.py  algolia.py  fly.toml  helpers.py  main.py  mjml.py  permissions.py  session.py  settings.py
api/authentication/: __init__.py  profile.py  providers.py
api/authentication/oauth/: __init__.py  client.py
api/aws/: stubs.py
api/communication/: __init__.py  messages.py  triggers.py
api/integrations/: __init__.py  discord.py  exports.py  judging.py  wafflebot.py  webhooks.py
api/operations/: __init__.py  settings.py
api/public/: __init__.py
api/registration/: __init__.py  applications.py  bulk.py  check_ins.py  participants.py  schools.py
api/statistics/: __init__.py  registration.py
api/workshops/: __init__.py  attendance.py  events.py
api/workshops/swag/: __init__.py  tiers.py
authentication/: __init__.py  main.py
common/: __init__.py  algolia.py  aws.py  events.py  mail.py  mjml.py  nats.py  permissions.py  tasks.py  tracing.py  version.py
common/authentication/: __init__.py  jwks.py
common/aws/: __init__.py  stubs.py
common/database/: __init__.py  dependencies.py  engine.py
common/database/migrations/: env.py  majors.json  schools.json  script.py.mako
common/database/tables/: __init__.py  application.py  country.py  discord_link.py  event.py  event_attendance.py  export.py  feedback.py  legal_agreements.py  message.py  message_trigger.py  participant.py  provider.py  recipient.py  school.py  settings.py  swag_tier.py  types.py  webhook.py
common/kv/: __init__.py  engine.py
common/mail/: __init__.py  mjml.py
common/settings/: __init__.py  general.py  specific.py  types.py
common/tracing/: __init__.py  botocore.py
communication/: __init__.py  main.py  messages.py  tasks.py  triggers.py  util.py
dev-proxy/: Caddyfile
docker-entrypoints/: api.sh  celery.sh  sync.sh  tasks.sh
frontend/: .env.example  .env.production  .eslintrc.js  .gitignore  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/scripts/: upload-source-maps.mjs
frontend/src/: App.tsx  ErrorHandler.tsx  Loading.tsx  Placeholder.tsx  index.tsx  scopes.ts  tokens.ts
frontend/src/authentication/: CompleteProfile.tsx  Login.tsx
frontend/src/components/: Alert.tsx  Authentication.tsx  Badge.tsx  Button.tsx  Card.tsx  Confirm.tsx  FormCard.tsx  Layout.tsx  Link.tsx  Navigation.tsx  RenderMarkdown.tsx  SidebarCard.tsx  navigation.tsx
frontend/src/organizers/: index.tsx
frontend/src/pages/: NotFound.tsx  Status.tsx
frontend/src/participants/: index.tsx
frontend/src/store/: authentication.ts  baseQuery.ts  communication.ts  errors.ts  hooks.ts  index.ts  integrations.ts  operations.ts  profile.ts  registration.ts  scopes.ts  selectors.ts  statistics.ts  types.ts  workshops.ts
infrastructure/: .eslintrc.js  .gitignore  .npmrc  package.json  tsconfig.json
infrastructure/src/: authentication.ts  index.ts  registration.ts  sync.ts
integrations/: __init__.py  discord.py  main.py
integrations/discord/: __init__.py  oauth.py
integrations/oauth/: __init__.py  client.py
mjml/: .env.example  Cargo.toml  package.json  pymjml.pyi  pyproject.toml  tsconfig.json
mjml/src/: index.ts  lib.rs  logging.ts  tracing.ts  version.ts
operations/: __init__.py  main.py  settings.py
registration/: __init__.py  applications.py  bulk.py  legal_agreements.py  main.py  participants.py  schools.py
registration/applications/: __init__.py
registration/legal_agreements/: __init__.py
registration/schools/: __init__.py
registration/verification/: __init__.py
ssl/: dev.local.crt  dev.local.key
sync/: __init__.py  initial.py  listener.py  main.py  models.py
tasks/: fly.toml  main.py  settings.py
tasks/handlers/: models.py
tasks/handlers/communication/: on_application_accepted.py  on_apply.py  (+7 more)
tasks/loader/: __init__.py  callback.py  errors.py  resolver.py  types.py
worker/: __init__.py  main.py
workshops/: __init__.py  attendance.py  events.py  feedback.py  main.py
workshops/swag/: __init__.py  tiers.py
(+250 files in other folders)
