[tool.poetry]
name = "application-portal"
version = "0.1.0"
description = "The application portal for WaffleHacks"
authors = ["WaffleHacks Technology Team <technology@wafflehacks.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {version = "^1.9.0", extras = ["dotenv", "email"]}
SQLAlchemy = {version = "=1.4.35", extras = ["mypy", "asyncio"]}
alembic = {version = "^1.7.6", extras = ["tz"]}
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
fastapi = "^0.73.0"
ujson = "^5.1.0"
uvicorn = {version = "^0.17.4", extras = ["standard"]}
aioredis = "^2.0.1"
aiohttp = {version = "^3.8.1", extras = ["speedups"]}
PyJWT = {version = "^2.3.0", extras = ["crypto"]}
boto3 = "^1.21.42"
click = "^8.0.3"
algoliasearch = "^2.6.1"
gunicorn = "^20.1.0"
wafflehacks-mailer = "^0.2.0"
celery = {version = "^5.2.6", extras = ["redis"]}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
ipython = "^8.2.0"
boto3-stubs-lite = {version = "^1.21.42", extras = ["s3", "sqs"]}

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
