[package]
name = "pymjml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymjml"
crate-type = ["cdylib"]

[dependencies]
minify-html = "0.11"
mrml = { version = "2.0.0-rc2", default-features = false, features = ["render", "orderedmap", "parse"] }
pyo3 = "0.18.3"
